--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DJANGO_SECRET = "django secret_key"
-DB_NAME = "jewelry"
-DB_USER = "user"
-DB_PW = "pw"
-DB_HOST = "localhost"
-DB_PORT = "3306"
+DB_NAME = drf_online_shop
+DB_USER = user
+DB_PW = pw
+DB_HOST = localhost
+DB_PORT = 3306
